--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
-version: '3.8'
-
 services:
   backend:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./backend  # Só envia o conteúdo da pasta backend
     container_name: prontuario-backend
     restart: always
     ports:
