--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,38 @@
+version: "3.8"
+
 services:
   backend:
     build:
-      context: ./backend  # Só envia o conteúdo da pasta backend
+      context: .
+      dockerfile: Dockerfile
     container_name: prontuario-backend
-    restart: always
     ports:
       - "5000:5000"
     environment:
       - FLASK_ENV=development
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/prontuario
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_NAME=prontuario
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
     depends_on:
       - db
     volumes:
-      - ./backend:/app
+      - ./backend:/app/backend
+    restart: unless-stopped
 
   db:
-    image: postgres:15
+    image: postgres:13
     container_name: prontuario-db
-    restart: always
     environment:
+      POSTGRES_DB: prontuario
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: prontuario
-    volumes:
-      - db_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    restart: unless-stopped
 
 volumes:
-  db_data:
+  pgdata:
