--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -2,12 +2,8 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY backend/requirements.txt .
+COPY . .
 
 RUN pip install --no-cache-dir -r requirements.txt
-
-COPY backend/ ./backend
-
-WORKDIR /app/backend
 
 CMD ["python", "app.py"]
