--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   backend:
     build:
-      context: .
+      context: ./Backend
       dockerfile: Dockerfile
     container_name: prontuario-backend
     ports:
@@ -18,7 +18,7 @@ services:
     depends_on:
       - db
     volumes:
-      - ./backend:/app/backend
+      - ./Backend:/app/
     restart: unless-stopped
 
   db:
@@ -28,6 +28,7 @@ services:
       POSTGRES_DB: prontuario
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      
     ports:
       - "5432:5432"
     volumes:
